--- a/views/listing/index.ejs
+++ b/views/listing/index.ejs
@@ -10,7 +10,7 @@
           <img src="<%=listing.image.url%>" class="card-img-top" alt="listing image" style="height: 20rem;">
           <div class="card-body">
             <h5 class="card-title"><b><%=listing.title%></b></h5>
-            <p class="card-text"> &#8377; <%=listing.price.toLocaleString("en-IN")%></p>
+            <p class="card-text"> &#8377; <%=listing.price.toLocaleString("en-IN")%>/night</p>
           </div>
         </div>
           </a>
